src/styles.css
@font-face {
  font-family: 'Rubik';
  src: url('./fonts/Rubik.woff2') format('woff2-variations');
  font-weight: 100 900;
  font-style: normal;
}

@font-face {
  font-family: 'Rubik';
  src: url('./fonts/Rubik-Italic.woff2') format('woff2-variations');
  font-weight: 100 900;
  font-style: italic;
}

/* Remove blue tap highlight on mobile (Android) */
* {
  -webkit-tap-highlight-color: transparent;
}

.icon {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: white;
  mask-size: contain;
  mask-repeat: no-repeat;
  mask-position: center;
  width: 65%;
  height: 65%;
  margin: auto;
}

.icon-add-user {
  mask-image: url("./icons/add-user.svg");
}

.icon-chats {
  mask-image: url("./icons/chats.svg");
}

.icon-crown {
  mask-image: url("./icons/crown.svg");
}

.icon-new-msg {
  mask-image: url("./icons/new-chat.svg");
}

.icon-image {
  mask-image: url("./icons/image.svg");
}

.icon-add-file {
  mask-image: url("./icons/add-file.svg");
}

.icon-attachment {
  mask-image: url("./icons/attachment.svg");
}

.icon-file-search {
  mask-image: url("./icons/file-search.svg");
}

.icon-file-unknown {
  mask-image: url("./icons/file-unknown.svg");
}

.icon-file {
  mask-image: url("./icons/file.svg");
}

.icon-film {
  mask-image: url("./icons/film.svg");
}

.icon-gift {
  mask-image: url("./icons/gift.svg");
}

.icon-info {
  mask-image: url("./icons/info.svg");
}

.icon-loading {
  mask-image: url("./icons/loading.svg");
}

.icon-locked {
  mask-image: url("./icons/locked.svg");
}

.icon-mic-on {
  mask-image: url("./icons/mic-on.svg");
}

.icon-mic-off {
  mask-image: url("./icons/mic-off.svg");
}

.icon-video {
  mask-image: url("./icons/video.svg");
}

.icon-smile-face {
  mask-image: url("./icons/smile-face.svg");
}

.icon-wink-face {
  mask-image: url("./icons/wink-face.svg");
}

.icon-user-circle {
  mask-image: url("./icons/user-circle.svg");
}

.icon-plus {
  mask-image: url("./icons/plus.svg");
}

.icon-reply {
  mask-image: url("./icons/reply.svg");
}

.icon-bookmark {
  mask-image: url("./icons/bookmark.svg");
}

.icon-bot {
  mask-image: url("./icons/bot.svg");
}

.icon-chevron-down {
  mask-image: url("./icons/chevron-down.svg");
}

.icon-chevron-double-left {
  mask-image: url("./icons/chevron-double-left.svg");
}

.icon-edit-user {
  mask-image: url("./icons/edit-user.svg");
}

.icon-file-plus {
  mask-image: url("./icons/file-plus.svg");
}

.icon-cancel {
  mask-image: url("./icons/cancel.svg");
}

.icon-x {
  mask-image: url("./icons/x.svg");
}

.icon-chat-circle {
  mask-image: url("./icons/chat-circle.svg");
}

.icon-settings {
  mask-image: url("./icons/settings.svg");
}

.icon-volume-mute {
  mask-image: url("./icons/volume-mute.svg");
}

.icon-volume-max {
  mask-image: url("./icons/volume-max.svg");
}

.icon-clock {
  mask-image: url("./icons/clock.svg");
}

.icon-star {
  mask-image: url("./icons/star.svg");
}

.icon-search {
  mask-image: url("./icons/search.svg");
}

.icon-send {
  mask-image: url("./icons/send.svg");
}

.icon-withdraw {
  mask-image: url("./icons/withdraw.svg");
}

.icon-pivx {
  mask-image: none !important;
  -webkit-mask-image: none !important;
  background-color: transparent !important;
  background-image: url("./icons/pivx.svg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

.icon-message {
  mask-image: url("./icons/message.svg");
}

:root {
  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;

  color: #f6f6f6;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;

  overscroll-behavior: none;
}

html, body {
  height: 100%;
  margin: 0;
}

::selection {
  background-color: rgba(255, 255, 255, 0.225);
  color: #ffffff;
}

::-webkit-scrollbar {
  width: 10px;
  background-color: transparent;
}

::-webkit-scrollbar-track {
  background-color: transparent;
}

::-webkit-scrollbar-thumb {
  background-color: #474747;
  border-radius: 10px;
  border: 2px solid transparent;
  background-clip: content-box;
}

::-webkit-scrollbar-thumb:hover {
  background-color: rgba(180, 180, 180, 0.8);
}

.container {
  margin: 0;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  text-align: center;
  height: 100%;
  min-height: 0;
}

.settings-btn {
  position: absolute;
  height: 50px;
  width: 50px;
  top: 0;
  right: 0;
  padding: 0;
  border: none;
  background-color: transparent;
  opacity: 0.75;
}

.settings-btn:hover {
  opacity: 0.5;
}

.popup-container {
  z-index: 10002;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  pointer-events: none;
  background-color: rgba(0, 0, 0, 0);
  transition: background-color 0.2s ease;
}

.popup-container.active {
  pointer-events: auto;
  background-color: rgba(0, 0, 0, 0.85);
  backdrop-filter: blur(4px);
  -webkit-backdrop-filter: blur(4px);
}

.popup {
  position: fixed;
  z-index: 10001;
  /* Too many weird WebKit filter issues - disabling and going solid for now */
  /* backdrop-filter: blur(10px); */
  border-style: solid;
  border-radius: 8px;
  padding: 30px;
  border-width: 1px;
  top: 50%;
  transform: translate(0%, -50%);
  pointer-events: auto;
  max-height: 90vh;
  display: flex;
  flex-direction: column;
  margin-left: 10px;
  margin-right: 10px;
}

.popup-content {
  overflow-y: auto;
  max-height: calc(90vh - 150px);
  margin-bottom: 10px;
  padding: 5px;
  word-break: keep-all;
}

#popupSubtext {
  word-break: keep-all;
}

.popup-buttons {
  margin-top: auto;
}

.text-gradient {
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  animation: BreathingGradient 6s cubic-bezier(.46,.03,.52,.96) infinite;
}
/* ... */

